clusters/main/kubernetes/apps/ergo/app/tlsroute.yaml
---
# yaml-language-server: $schema=https://www.schemastore.org/any.json
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: ergo
  namespace: ergo
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: irc
  hostnames:
    - "ergo.${DOMAIN_0}"
  rules:
    - backendRefs:
        - name: ergo-app-template
          port: 6667
